# fileFuzz

./: .gitignore  README.md
cmp/: README.md  lextab.py  monitor-outputs.sh
cmp/010success/: success&&fail
cmp/010templates/: MP4.bt  PCAP.bt  elf-32bit  elf-64bit  lzip.lz  mach-o  mscab.cab  mysqldump.sql  pcx.pcx  working_list
cmp/afl-2.52b/: Makefile  afl-analyze  afl-as  afl-fuzz  afl-fuzz.c  afl-fuzz_0708.c  afl-fuzz_0712.c  afl-fuzz_beiyong.c  afl-g++  afl-gotcpu  afl-showmap  afl-tmin  config.h  i2ktest.json  read-bitmap.c  read-json.c  read-json.h  test  test.txt  types.h  z.txt
cmp/dictionary/: ffmpeg.txt
cmp/keywords/: keywords_jpg.txt  keywords_mp3.txt  keywords_mp4.txt  keywords_ogg.txt  keywords_png.txt  keywords_rar.txt  keywords_torrent.txt  keywords_wav.txt
cmp/libdft64/: INSTALL
cmp/utils/: gen_kerword_compare.py  gen_keyword_map.py  gen_keyword_map_.py  pfp_show_file_struct.py  predict_struct_pos.py  run-dtracker-32bits.py  run-dtracker-64bits.py  string2ascii.py  trans-bb-addr.py
target_progs/: Makefile  call_log_addr.txt  libsndfile-1.0.25-10.el7.i686.rpm  rawprov.out  readpng-file-input  readpng-file-input.c  readpng-file-input_hash2bb.json  readpng-file-input_loc2cmp.json  readpng-file-input_loc2tuple.json
target_progs/libpng/: Makefile  config.status  libtool  pngimage  pngstest  pngunknown  pngvalid  timepng
target_progs/libpng-1.6.34/: png-fix-itxt  pngcp  pngfix  pngrutil.c  pngtest
target_progs/libpng-1.6.37/: Makefile  config.status  libtool  png-fix-itxt  pngcp  pngfix  pngimage  pngstest  pngtest  pngunknown  pngvalid  timepng
target_progs/target_gif/: call_log_addr.txt  gif2rgb_hash2bb.json  gif2rgb_loc2cmp.json  gif2rgb_loc2tuple.json  gifbuild_hash2bb.json  gifbuild_loc2cmp.json  gifbuild_loc2tuple.json
target_progs/target_libpcap/: call_log_addr.txt  capturetest  capturetest_hash2bb.json  capturetest_loc2cmp.json  capturetest_loc2tuple.json  filtertest  filtertest_hash2bb.json  filtertest_loc2cmp.json  filtertest_loc2tuple.json  valgrindtest  valgrindtest_hash2bb.json  valgrindtest_loc2cmp.json  valgrindtest_loc2tuple.json
target_progs/target_libpng/: Makefile  call_log_addr.txt  readpng-file-input  readpng-file-input_hash2bb.json  readpng-file-input_loc2cmp.json  readpng-file-input_loc2tuple.json
target_progs/target_oggvideotools/oggvideotools-0.9.1/: CMakeLists.txt  COPYING  ChangeLog  TODO
target_progs/target_oggvideotools/oggvideotools-0.9.1/cpackInfo/: COPYING.rtf  COPYING.txt  Welcome.rtf
target_progs/target_oggvideotools/oggvideotools-0.9.1/docs/: CMakeLists.txt  Doxyfile  conv2html.sh  mkThumbs.html  oggCat.html  oggCut.html  oggJoin.html  oggLength.1  oggSilence.html  oggSplit.1  oggSplit.html  oggThumb.html  oggTranscode.html
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/: CMakeLists.txt  definition.h  th_helper.h  theoraConfig.cpp  theoraConfig.h  videoInfo.h  wishList.h
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/base/: CMakeLists.txt  bufferRepository.h  granulePosInterpreter.h  mediaConverter.cpp  mediaConverter.h  mediaDecoder.cpp  mediaDecoder.h  mediaInputEncoder.cpp  mediaOutputDecoder.cpp  oggComment.h  oggDecoder.h  oggPacket.cpp  oggPage.cpp  oggPage.h  oggRingbuffer.cpp  oggRingbuffer.h  oggStreamDecoder.h  rawMediaPacket.h  refObject.h  streamConfig.h  streamExtractor.cpp  streamExtractor.h
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/base/test/: decoderTest.cpp  encoderTest.cpp
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/binaries/: oggJoin.cpp  oggSlideshow.cpp  oggThumb.cpp  oggTranscode.cpp
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/effect/: CMakeLists.txt  basePlane.h  blendElement.h  crossfader.h  effectorVisitor.cpp  lowpassEffect.cpp  lowpassEffect.h  pictureBlend.cpp  pictureBlend.h  pictureLoader.h  pictureResize.cpp  plainPicture.h  rgbPlane.cpp  shiftblendEffect.cpp
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/libresample/: resample_defs.h
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/main/: CMakeLists.txt  audioConverter.cpp  audioHook.cpp  audioHook.h  hookHandler.cpp  streamSerializer.h  videoHook.cpp
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/misc/: CMakeLists.txt  crc.h  log.h
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/ovt_kate/: kateExtractor.h  kateHeader.h  katePosInterpreter.cpp  katePosInterpreter.h  kateStreamParameter.cpp
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/ovt_theora/: CMakeLists.txt  theoraDecoder.cpp
target_progs/target_oggvideotools/oggvideotools-0.9.1/src/ovt_vorbis/: audioPacket.cpp  vorbisDecoder.h  vorbisEncoder.cpp  vorbisEncoder.h  vorbisExtractor.cpp
target_progs/target_oggvideotools/oggvideotools-0.9.1/testsuite/: testoggThumb.sh
target_progs/target_oggvideotools/oggvideotools-0.9.1/testvideos/: getVideos.sh
target_progs/target_oggvideotools_addresssanitizer/oggvideotools-0.9.1/src/binaries/: CMakeLists.txt  oggCat.cpp  oggCut.cpp  oggDump.cpp  oggLength.cpp  oggScroll.cpp  oggSilence.cpp  oggSplit.cpp
target_progs/target_rar2/: Rarcrack_hash2bb.json  Rarcrack_loc2cmp.json  Rarcrack_loc2tuple.json  call_log_addr.txt
target_progs/target_rar_gzip/: call_log_addr.txt  gzip  gzip_hash2bb.json  gzip_loc2cmp.json  gzip_loc2tuple.json
target_progs/target_tests/: call_log_addr.txt  lea.out  read  readpng-file-input  readpng-file-input_hash2bb.json  readpng-file-input_loc2cmp.json  readpng-file-input_loc2tuple.json
target_progs/target_vorbis-tools-1.4.0/: vorbis-tools-1.4.0-security_fix-1.patch
target_progs/target_vorbisgain/vorbisgain-0.36/: Makefile  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  gain_analysis.c  gain_analysis.h  getopt.c  i18n.h  misc.c  misc.h  recurse.c  recurse.h  vorbis.c  vorbis.h  vorbisgain  vorbisgain.1  vorbisgain.c  vorbisgain.h  vorbisgain.txt
target_progs/target_vorbisgain/vorbisgain-0.36/.deps/: gain_analysis.Po  misc.Po  recurse.Po  vcedit.Po  vorbis.Po  vorbisgain.Po
(+732 files in other folders)
